2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.BadPractice.xml,
	doc/Gendarme.Rules.BadPractice: With the new code in the Makefiles we
	doesn't need store the documentation files in the repository.

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-09-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotUseGetInterfaceToCheckAssignabilityRule.cs: New. Rule to
	check if Type.GetInterface is being used to defect the presence, or
	absence, of an interface (wrt getting back a Type instance). There is
	a better way to check for this when the interface name is known at
	compile time.
	* Makefile.am: Add rule/test to the build.

2008-09-20  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidAssemblyVersionMismatchRule.cs: New. Rule to check if the
	version numbers in both [AssemblyVersion] and [AssemblyFileVersion]
	match.
	* Makefile.am: Add rule/test to the build.

2008-09-19  Sebastien Pouliot  <sebastien@ximian.com> 

	* ReplaceIncompleteOddnessCheckRule.cs: Reduce the OpCodeBitmask
	properties visibility [self-test]

2008-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidCallingProblematicMethodsRule.cs: Use OpCodeEngine to
	analyze only if both a Call or Callvirt are present in the method's
	IL. Added XML documentation.
	* AvoidVisibleConstantFieldRule.cs: Added XML documentation.
	* CheckNewExceptionWithoutThrowingRule.cs: Use OpCodeEngine to 
	analyze only if a Newobj instruction is present in the method's IL. 
	Added XML documentation. Use shorter override for Runner.Report.
	* CheckNewThreadWithoutStartRule.cs: Use OpCodeEngine to analyze 
	only if a Newobj instruction is present in the method's IL. Added XML
	documentation.
	* CloneMethodShouldNotReturnNullRule.cs: Big simplification by 
	using the new ReturnNullRule. Added XML documentation.