@@ -1,8 +1,13 @@
 2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>
 
+	* Makefile.am: Added support for generating the documentation files to
+	the build process.
+
+2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>
+
 	* doc/index.xml, doc/ns-Gendarme.Rules.BadPractice.xml,
 	doc/Gendarme.Rules.BadPractice: With the new code in the Makefiles we
-	doesn't need store the documentation files in the repository.
+	don't need to store the documentation files in the repository.
 
 2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>
 
